WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265851
[WebGPU] Device::createRenderPipeline will crash (MTLReportFailure) if fragmentDescriptor.targetCount > 8
https://bugs.webkit.org/show_bug.cgi?id=265851
Summary
[WebGPU] Device::createRenderPipeline will crash (MTLReportFailure) if fragme...
Mike Wyrzykowski
Reported
2023-12-04 21:38:55 PST
[WebGPU] Device::createRenderPipeline will crash (MTLReportFailure) if fragmentDescriptor.targetCount > 8
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-04 21:39:07 PST
<
rdar://problem/119169360
>
Mike Wyrzykowski
Comment 2
2023-12-04 21:45:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21319
EWS
Comment 3
2023-12-04 23:37:02 PST
Committed
271540@main
(73cbb938bbc5): <
https://commits.webkit.org/271540@main
> Reviewed commits have been landed. Closing PR #21319 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug