[WebGPU] Device::createRenderPipeline will crash (MTLReportFailure) if fragmentDescriptor.targetCount > 8 https://bugs.webkit.org/show_bug.cgi?id=265851 <radar://119169360>

Reviewed by Dan Glastonbury.

Further validation will be added but this prevents a crash
while running the CTS when more than 8 color targets are used.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::validateRenderPipeline):

Canonical link: https://commits.webkit.org/271540@main